// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion headers close panes 1`] = `
<blaze-accordion
  class="hydrated"
>
  
  
  
  
  
  
  <div
    class="c-card c-card--accordion"
  >
    
    
              
    <blaze-accordion-pane
      class="hydrated"
      header="Click me"
    >
      
      
      <button
        aria-expanded="false"
        class="c-card__control"
        role="heading"
      >
        Click me
      </button>
      <section
        aria-hidden="true"
        class="c-card__item c-card__item--pane"
      >
        
        
                This is an accordion
              
      </section>
    </blaze-accordion-pane>
    
              
    <blaze-accordion-pane
      class="hydrated"
      header="Click me also"
    >
      
      
      <button
        aria-expanded="false"
        class="c-card__control"
        role="heading"
      >
        Click me also
      </button>
      <section
        aria-hidden="true"
        class="c-card__item c-card__item--pane"
      >
        
        
                To toggle other panes
                
      </section>
    </blaze-accordion-pane>
    
            
  </div>
</blaze-accordion>
`;

exports[`Accordion headers open panes 1`] = `
<blaze-accordion
  class="hydrated"
>
  
  
  
  
  
  
  <div
    class="c-card c-card--accordion"
  >
    
    
              
    <blaze-accordion-pane
      class="hydrated"
      header="Click me"
    >
      
      
      <button
        aria-expanded="true"
        class="c-card__control c-card__control--active"
        role="heading"
      >
        Click me
      </button>
      <section
        aria-hidden="false"
        class="c-card__item c-card__item--pane"
      >
        
        
                This is an accordion
              
      </section>
    </blaze-accordion-pane>
    
              
    <blaze-accordion-pane
      class="hydrated"
      header="Click me also"
    >
      
      
      <button
        aria-expanded="false"
        class="c-card__control"
        role="heading"
      >
        Click me also
      </button>
      <section
        aria-hidden="true"
        class="c-card__item c-card__item--pane"
      >
        
        
                To toggle other panes
                
      </section>
    </blaze-accordion-pane>
    
            
  </div>
</blaze-accordion>
`;

exports[`Accordion renders an emtpy accordion 1`] = `
<blaze-accordion
  class="hydrated"
>
  
  <div
    class="c-card c-card--accordion"
  >
    
  </div>
</blaze-accordion>
`;

exports[`Accordion renders two headers and two panes 1`] = `
<blaze-accordion
  class="hydrated"
>
  
  
  
  
  
  
  <div
    class="c-card c-card--accordion"
  >
    
    
        
    <blaze-accordion-pane
      class="hydrated"
      header="Click me"
    >
      
      
      <button
        aria-expanded="false"
        class="c-card__control"
        role="heading"
      >
        Click me
      </button>
      <section
        aria-hidden="true"
        class="c-card__item c-card__item--pane"
      >
        
        
          This is an accordion
        
      </section>
    </blaze-accordion-pane>
    
        
    <blaze-accordion-pane
      class="hydrated"
      header="Click me also"
    >
      
      
      <button
        aria-expanded="false"
        class="c-card__control"
        role="heading"
      >
        Click me also
      </button>
      <section
        aria-hidden="true"
        class="c-card__item c-card__item--pane"
      >
        
        
          To toggle other panes
          
      </section>
    </blaze-accordion-pane>
    
      
  </div>
</blaze-accordion>
`;
